# Portalis

./: .gitattributes  LICENSE  README.md
.github/actions/build-android/: action.yml
.github/actions/build-ios/: action.yml
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-web/: action.yml
.github/actions/build-windows/: action.yml
.github/actions/setup-flutter-rust/: action.yml
.github/workflows/: pipeline.yml
doc/: build.md  overview.md  setup_guide.md
portalis/: .gitignore  README.md  pubspec.yaml
portalis/android/: build_rust_android.sh
portalis/android/app/: build.gradle
portalis/ios/Runner/: Info.plist  build_rust_ios.sh
portalis/ios/Runner.xcodeproj/: project.pbxproj
portalis/lib/: main.dart
portalis/lib/bridge_generated/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
portalis/linux/: CMakeLists.txt  my_application.cc
portalis/macos/Runner/: build_backend.sh
portalis/macos/Runner.xcodeproj/: project.pbxproj
portalis/macos/Runner/Configs/: AppInfo.xcconfig
portalis/rust/: Cargo.toml
portalis/rust/backend/: Cargo.toml
portalis/rust/backend/src/: api.rs  lib.rs
portalis/rust/src/: lib.rs
portalis/test/: widget_test.dart
portalis/tool/: build_windows.ps1  frb_build.sh
portalis/web/: index.html  manifest.json
portalis/windows/: CMakeLists.txt
portalis/windows/runner/: Runner.rc  main.cpp
scripts/: project_migration.py
setup/: wizard_linux.sh  wizard_windows.ps1
tests/: all.sh  backend.sh  frontend.sh
(+3 files in other folders)
